[b]2.8.7[/b]
- Changed: All API calls are now encrypted (https)
- Fixed: Corrected server locations Asia and Europe

[b]2.8.6[/b]
- Added: Indicate home or away feed with asterisk for inactive events
- Added: Filter by HD only or SD only option
- Added: Display basketball image and fanart.jpg
- Added: Display score and period for live games
- Fixed: Also display FINAL after over-time games terminate
- Fixed: IP Exception failure message properly notifies issue
- Fixed: Password is hidden

[b]2.8.5[/b]
- Added: When available indicate home or away feed with asterisk
- Fixed: Display FINAL when live game streams clear

[b]2.8.4[/b]
- Added: Include Coming Soon games in Live feed
- Changed:  Always show full team names in Team archive section
- Changed:  Display TrueLive instead of RTMP and sort HD first

[b]2.8.3[/b]
- Changed: short team names for NBA updated

[b]2.8.2[/b]
- Fixed: iStream SD fixed for live events

[b]2.8.1[/b]
- Added: north america - east canada as a streaming location

[b]2.8.0[/b]
- Removed: ip check removed, got the go-ahead from ballstreams

[b]2.7.1[/b]
- Fixed: ballstreams api change now returning null for streams and empty dates

[b]2.7.0[/b]
- Added: location setting so users can define which servers they want to use
- Added: rtmp stream support, can be enabled/disabled via settings
- Added: setting to enable/disable wmv stream listing
- Changed: removed strings.xml for new string.po format in xbmc

[b]2.6.0[/b]
- Added: poll for ip check, required for misuse of multiple accounts
- Fixed: live events empty response now returns no items in the ui instead of error

[b]2.5.0[/b]
- Added: check for valid stream url's
- Added: sd and hd istreams when available
- Changed: short team names is now defaulted to off

[b]2.4.0[/b]
- Added: short team name lookup, shows friendly names in the ui so they are not as long

[b]2.3.0[/b]
- Added: fix for login exceptions when invalid account was used, displays a nice message now